--- a/telas.css
+++ b/telas.css
@@ -1,31 +1,30 @@
 body {
-    background-color: #bbf1d8;
+    background-color: #9ad188;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: auto;
-    text-align: center;
     width: 85%;
 }
 
 .titulo {
-    background-color: #ffffff;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 4%;
+    background-color: #71b876;
+    color: #FBF6F1;
     text-align: center;
-    width: 85%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.subtitulo {
+    text-decoration: underline;
+    color:#3f7543;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.comuna {
+    text-decoration: underline;
 }
 
 .lista {
-    background-color: #e3fdf1;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 3%;
-    text-align: left;
-    width: 65%;
-}
-
-.subtitulo  {
-    background-color: #a7d8c1;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 3%;
+    background-color: #71b876;
+    color: #162e18;
     text-align: center;
-    width: 85%;
 }
